fixed co alignment

--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -33,9 +33,10 @@ header {
   	color: $brand-secondary;
   	display: inline-block;
   	font-size: 14px;
-  	line-height: 22px;
+  	line-height: 20px;
+  	margin-top: -10px;
   	text-align: center;
-  	vertical-align: super;
+  	vertical-align: middle;
   	width: auto;
   }
 
